# BhratLex

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  funding.json  quick_start.sh  test_garuda.sh  test_system.sh
.well-known/: funding-manifest-urls
analyzer/: config.json  requirements.txt  run.sh  setup.sh  utils.py  vlm_client.py  worker.py
engine/: .dockerignore  Cargo.toml  Dockerfile  config.toml
engine/models/: student.json
engine/src/: config.rs  detectors.rs  engine.rs  error.rs  features.rs  hard_intel.rs  linucb.rs  main.rs  models.rs  redis_client.rs  routes.rs  storage.rs  student.json  student_model.rs  types.rs
garuda/: .gitignore
garuda/engine/: Cargo.toml  student.json
garuda/engine/data/intel/: abuse_ch.txt  gsb.txt  shadowserver.txt  spamhaus_drop.txt
garuda/engine/src/: bandit.rs  features.rs  intel.rs  main.rs  metrics.rs  model.rs  queue.rs  storage.rs  types.rs
garuda/infra/: clickhouse_schema.sql  docker-compose.yml  init-clickhouse.sh
infra/: clickhouse_schema.sql  docker-compose.yml  init-clickhouse.sh
train/: distill_student.py  requirements.txt  sample_data.csv
