[package]
name = "garuda-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garuda-engine"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Redis client
redis = { version = "0.24", features = ["tokio-comp"] }

# ClickHouse client
clickhouse = "0.11"

# Math and ML
nalgebra = "0.32"
rand = "0.8"

# Domain parsing and validation
publicsuffix = "2.2"
idna = "0.5"
url = "2.4"

# String similarity
strsim = "0.10"

# Crypto and hashing
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.13"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# DNS resolution
trust-dns-resolver = "0.23"

# IP address utilities
ipnet = "2.8"

[dev-dependencies]
tokio-test = "0.4"